@@ -115,6 +115,7 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Add X-$gProject-PR-Source: line (closes: #219230)
     - Document nnn.*@foobar addresses (closes: #188670)
     - Support cloned bugs in control blocking (closes: #337329)
+    - Indicate which bugs are blocked after blocking (closes: #367496)
   
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
